# uMTP-Responder

./: .gitignore  CMakeLists.txt  Makefile  README.md  Release-notes.txt  meson.build  meson_options.txt
.github/workflows/: ccpp.yml
conf/: S98uMTPrd  umtprd-ffs.sh  umtprd.conf  umtprd.init  umtprd.sh  umtprd_gfs.sh
inc/: buildconf.h  default_cfg.h  fs_handles_db.h  hash_utils.h  inotify.h  logs_out.h  msgqueue.h  mtp.h  mtp_cfg.h  mtp_constant.h  mtp_constant_strings.h  mtp_datasets.h  mtp_helpers.h  mtp_operations.h  mtp_ops_helpers.h  mtp_properties.h  mtp_sanitize.h  mtp_support_def.h  usb_gadget.h  usb_gadget_fct.h  usbstring.h
src/: fs_handles_db.c  hash_utils.c  inotify.c  logs_out.c  meson.build  msgqueue.c  mtp.c  mtp_cfg.c  mtp_constant_strings.c  mtp_datasets.c  mtp_helpers.c  mtp_properties.c  mtp_sanitize.c  mtp_support_def.c  umtprd.c  usb_gadget.c  usbstring.c
src/mtp_operations/: meson.build  mtp_op_begineditobject.c  mtp_op_closesession.c  mtp_op_deleteobject.c  mtp_op_endeditobject.c  mtp_op_getdeviceinfos.c  mtp_op_getdevicepropdesc.c  mtp_op_getdevicepropvalue.c  mtp_op_getobject.c  mtp_op_getobjecthandles.c  mtp_op_getobjectinfo.c  mtp_op_getobjectpropdesc.c  mtp_op_getobjectproplist.c  mtp_op_getobjectpropssupported.c  mtp_op_getobjectpropvalue.c  mtp_op_getobjectreferences.c  mtp_op_getpartialobject.c  mtp_op_getstorageids.c  mtp_op_getstorageinfo.c  mtp_op_opensession.c  mtp_op_sendobject.c  mtp_op_sendobjectinfo.c  mtp_op_setobjectpropvalue.c  mtp_op_truncateobject.c  mtp_ops_helpers.c
