umtprd_sources = files([
  'fs_handles_db.c',
  'inotify.c',
  'logs_out.c',
  'msgqueue.c',
  'mtp.c',
  'mtp_cfg.c',
  'mtp_constant_strings.c',
  'mtp_datasets.c',
  'mtp_helpers.c',
  'mtp_properties.c',
  'mtp_support_def.c',
  'umtprd.c',
  'usb_gadget.c',
  'usbstring.c',
])

subdir('mtp_operations')
