umtprd_sources += files([
  'mtp_op_begineditobject.c',
  'mtp_op_closesession.c',
  'mtp_op_deleteobject.c',
  'mtp_op_endeditobject.c',
  'mtp_op_getdeviceinfos.c',
  'mtp_op_getdevicepropdesc.c',
  'mtp_op_getdevicepropvalue.c',
  'mtp_op_getobject.c',
  'mtp_op_getobjecthandles.c',
  'mtp_op_getobjectinfo.c',
  'mtp_op_getobjectpropdesc.c',
  'mtp_op_getobjectproplist.c',
  'mtp_op_getobjectpropssupported.c',
  'mtp_op_getobjectpropvalue.c',
  'mtp_op_getobjectreferences.c',
  'mtp_op_getpartialobject.c',
  'mtp_op_getstorageids.c',
  'mtp_op_getstorageinfo.c',
  'mtp_op_opensession.c',
  'mtp_op_sendobject.c',
  'mtp_op_sendobjectinfo.c',
  'mtp_op_setobjectpropvalue.c',
  'mtp_ops_helpers.c',
  'mtp_op_truncateobject.c',
])
